<resources>
    <string name="app_name">Muara Baru</string>
    <string name="sub_name">Cold Storage</string>
    <string name="author">Provided by\nKementrian Kelautan dan Prikanan</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="dont_have_account">Don\'t have an account \?</string>
</resources>