<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="45dp"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/iv_email"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_rounded_white__blue_8"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/iv_password"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_rounded_white__blue_8"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:layout_editor_absoluteX="22dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/layout_rounded_blue_8"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/iv_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>